test pull heroku

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <description>test-docker-wtfmywork</description>
     <properties>
         <java.version>16</java.version>
-        <maven.deploy.skip>true</maven.deploy.skip>
+<!--        <maven.deploy.skip>true</maven.deploy.skip>-->
     </properties>
     <dependencies>
         <dependency>
@@ -35,27 +35,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>com.spotify</groupId>
-                <artifactId>dockerfile-maven-plugin</artifactId>
-                <version>1.4.6</version>
-                <executions>
-                    <execution>
-                        <id>default</id>
-                        <goals>
-                            <goal>build</goal>
-                            <goal>push</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <repository>registry.heroku.com/${project.artifactId}/web</repository>
-                    <tag>latest</tag>
-                    <buildArgs>
-                        <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
-                    </buildArgs>
-                </configuration>
             </plugin>
         </plugins>
     </build>
